[gd_scene load_steps=5 format=3 uid="uid://d0ai8mc8llfcu"]

[ext_resource type="Script" path="res://scripts/Home screen scripts/Home.gd" id="1_86gem"]
[ext_resource type="Theme" uid="uid://du64vlif1cn8q" path="res://Theme/button.tres" id="1_jgl4x"]
[ext_resource type="FontFile" uid="uid://c156o8gr4qu6r" path="res://Font/DungeonFont.ttf" id="3_dhfri"]
[ext_resource type="PackedScene" uid="uid://1tpueqgtc4gh" path="res://scenes/bg.tscn" id="3_lmfcw"]

[node name="Home" type="Node2D"]
script = ExtResource("1_86gem")

[node name="Play" type="Button" parent="."]
offset_left = 425.0
offset_top = 50.0
offset_right = 690.0
offset_bottom = 191.0
theme = ExtResource("1_jgl4x")
theme_override_fonts/font = ExtResource("3_dhfri")
theme_override_font_sizes/font_size = 45
text = "Play"

[node name="How To" type="Button" parent="."]
offset_left = 425.0
offset_top = 250.0
offset_right = 690.0
offset_bottom = 391.0
theme = ExtResource("1_jgl4x")
theme_override_fonts/font = ExtResource("3_dhfri")
theme_override_font_sizes/font_size = 45
text = "How to Play"

[node name="Quit" type="Button" parent="."]
offset_left = 425.0
offset_top = 450.0
offset_right = 690.0
offset_bottom = 591.0
theme = ExtResource("1_jgl4x")
theme_override_fonts/font = ExtResource("3_dhfri")
theme_override_font_sizes/font_size = 45
text = "Quit"

[node name="BG" parent="." instance=ExtResource("3_lmfcw")]

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="How To" to="." method="_on_how_to_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
